--- a/Ironhack/super-manager-movies/views/layout.ejs
+++ b/Ironhack/super-manager-movies/views/layout.ejs
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-       <h1>HELLO</h1>
+       <h1>HELLO HELLO </h1>
     <%- body %>
 
     <script src="/js/script.js"></script>
