--- a/Ironhack/super-manager-movies/views/layout.ejs
+++ b/Ironhack/super-manager-movies/views/layout.ejs
@@ -9,7 +9,8 @@
   </head>
 
   <body>
-
+    <a href="/auth/signup"> Sign Up </a>
+    <a href="/auth/logout"> Log in </a>
     <%- body %>
 
     <script src="/js/script.js"></script>
