--- a/Ironhack/super-manager-movies/views/auth/login.ejs
+++ b/Ironhack/super-manager-movies/views/auth/login.ejs
@@ -1,3 +1,5 @@
+
+
 <form action="/auth/login" method="POST">
   <label>
     Username
@@ -7,8 +9,8 @@
     Password
     <input type="password" name="password" />
   </label>
-
   <button type="submit">Submit</button>
 </form>
 
- 
+<%# if (errorMessage) { %> <%#= errorMessage %> <%# } %>
+
