--- a/Ironhack/super-manager-movies/views/auth/signup.ejs
+++ b/Ironhack/super-manager-movies/views/auth/signup.ejs
@@ -1,3 +1,4 @@
+
 <form action="/auth/signup" method="POST">
   <label>
     Username
@@ -10,5 +11,6 @@
 
   <button type="submit">Submit</button>
 </form>
+</div>
 
   <%# if (errorMessage) { %> <%#= errorMessage %> <%# } %>
