--- a/Ironhack/super-manager-movies/views/layout.ejs
+++ b/Ironhack/super-manager-movies/views/layout.ejs
@@ -8,6 +8,7 @@
   </head>
 
   <body>
+    <a href="/movies/movie"> Get Movie by ID </a>
     <nav>
       <ul>
         <li id="to-right">
@@ -18,6 +19,9 @@
         </li>
         <li id="to-right">
           <a href="/auth/login">Log in</a>
+        </li>
+        <li>
+         
         </li>
       </ul>
     </nav>
