get all movies .... done

--- a/Ironhack/super-manager-movies/views/layout.ejs
+++ b/Ironhack/super-manager-movies/views/layout.ejs
@@ -9,6 +9,7 @@
 
   <body>
     <a href="/movies/movie"> Get Movie by ID </a>
+    <a href="/movies/lists"> Go to List </a>
     <nav>
       <ul>
         <li id="to-right">
