--- a/Ironhack/super-manager-movies/views/mov/lists.ejs
+++ b/Ironhack/super-manager-movies/views/mov/lists.ejs
@@ -5,7 +5,7 @@
         <p> <img src=<%= `https://image.tmdb.org/t/p/w500/${listAPI[i].backdrop_path}`%>> </p> 
     <% } %>
     
-    <p><%= listAPI[i].title %> </p>
+    <p><a href="/movies/lists/<%= listAPI[i].id %> "><%= listAPI[i].title %>  </a></p>
     <p><%= listAPI[i].overview %> </p
 <% } %>
 
