--- a/Ironhack/super-manager-movies/views/mov/movie.ejs
+++ b/Ironhack/super-manager-movies/views/mov/movie.ejs
@@ -7,7 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-  <img src="https://image.tmdb.org/t/p/w500/<%= movies.backdrop_path %> " alt="img">  
+    <% if (movies.backdrop_path === null) { %>
+        <p></p>
+    <% } else { %>
+        <img src="https://image.tmdb.org/t/p/w500/<%= movies.backdrop_path %> " alt="img">  
+   <% } %>
+  
 <h2><%=  movies.title %></h2>
 
 <h4>genres:</h4>
