search is done- popular - similar

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -8,8 +8,9 @@
   </head>
 
   <body>
-    <a href="/movies/movie"> Get Movie by ID </a>
-    <a href="/movies/lists"> Go to List </a>
+    
+    <a href="/movies/lists"> Get a list of lists that this movie belongs to. </a>
+    <a href="/movies/popular"> Get a list of the current popular movies on TMDB. This list updates daily. </a>
     <nav>
       <ul>
         <li id="to-right">
@@ -28,7 +29,7 @@
     </nav>
     <%- body %>
 
-    <script src="/js/script.js"></script>
+    <script src="/js/srp.js"></script>
   </body>
 
 </html>
