--- a/views/mov/movie.ejs
+++ b/views/mov/movie.ejs
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+   <a href="/movies/lists/<%= movies.id%>/similar ">similar</a>
     <% if (movies.backdrop_path === null) { %>
         <p></p>
     <% } else { %>
