--- a/views/mov/lists.ejs
+++ b/views/mov/lists.ejs
@@ -1,36 +1,35 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/stylesheets/movie.css" />
-</head>
 
-<body id="moviesbody"> 
 
-    <nav>
-        <ul>
-          <li id="to-right">
-            <a href="/auth/logout">Log Out</a>
-          </li>
-          <li id="to-right">
-            <a href="/">Home</a>
-          </li>
-        </ul>
-      </nav>
+<form action="/movies/lists/search" method="get">
     
+    <label for="sch"></label>
+    
+    <input type="search" name="search" id="sch" placeholder="search">
+    <button  type="submit" >Look</button>
+   <%#onclick="window.location='/lists/search'"  %> 
+    <a href="/movies/lists/search">search</a>
+
+</form>
+
+ 
+
 <% for( let i = 0; i < listAPI.length; i++ ) { %>
+    
     <% if (listAPI[i].backdrop_path === null) { %>
+      
         <p></p>
-    <% } else { %>
-    <p> <img src=<%= `https://image.tmdb.org/t/p/w500/${listAPI[i].backdrop_path}`%>> </p> 
+    
+        <% } else { %>
+       
+            <p> <img src=<%= `https://image.tmdb.org/t/p/w500/${listAPI[i].backdrop_path}`%>> </p> 
     <% } %>
+    
+   
+    <p><a href="/movies/lists/<%= listAPI[i].id %> "><%= listAPI[i].title %>  </a></p>
+    
+    
+    <p><%= listAPI[i].overview %> </p
 
-    <p><a class = "movie-title" href="/movies/lists/<%= listAPI[i].id %> "><%= listAPI[i].title %>  </a></p>
-    <p> <%=  listAPI[i].overview %> </p>
+        <% } %>
 
-<% } %>
 
-</body>
-</html>
