--- a/views/auth/profile.ejs
+++ b/views/auth/profile.ejs
@@ -3,12 +3,9 @@
 <html lang="en">
 
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    
     <link rel="stylesheet" href="/stylesheets/style.css" />
     
-
   </head>
 
     <body>
@@ -22,11 +19,14 @@
           <a href="/">Home</a>
         </li>
         <li id="to-right">
-          <a href="/movies/lists">Find a movie</a>
+          <a href="/movies/lists">Find your movie</a>
+        </li>
+        <li id="to-right">
+          <a href="/movies/popular">Popular movies</a>
         </li>
       </ul>
     </nav>
-  
+    
 
 <div class="profiletext"><h1>Welcome <%=user.username%></h1> </div>
 
@@ -34,10 +34,3 @@
 </body>
 
 </html>
-
-=======
-<a href="/"> Home </a>
-<h1> Your Profile Page </h1>
-<h2>Welcome <%=user.username%></h2>
-<a href="/auth/logout"> Log out </a>
->>>>>>> 22e7e0d (Go one folder up)
