--- a/views/mov/lists.ejs
+++ b/views/mov/lists.ejs
@@ -1,17 +1,32 @@
 
+<link rel="stylesheet" href="/stylesheets/movie.css" />
+
+<nav>
+    <ul>
+      <li id="to-right">
+        <a href="/auth/logout">Log Out</a>
+      </li>
+      <li id="to-right">
+        <a href="/">Home</a>
+      </li>
+      <li id="to-right">
+        <a href="/movies/popular">Popular movies</a>
+      </li>
+
+    </ul>
+  </nav>
 
 <form action="/movies/lists/search" method="get">
     
     <label for="sch"></label>
     
-    <input type="search" name="search" id="sch" placeholder="search">
-    <button  type="submit" >Look</button>
+    <input type="search" name="search" id="sch" placeholder="type the name of your movie">
+    <button  type="submit" >Find your movie</button>
   
 
 </form>
 
- 
-
+<section>
 <% for( let i = 0; i < listAPI.length; i++ ) { %>
     
     <% if (listAPI[i].backdrop_path === null) { %>
@@ -20,14 +35,10 @@
     
         <% } else { %>
        
-            <p> <img src=<%= `https://image.tmdb.org/t/p/w500/${listAPI[i].backdrop_path}`%>> </p> 
+ <div> <a href="/movies/lists/<%= listAPI[i].id %> "><%= listAPI[i].title %>  </a></div>
+ <div class="textmovielist"> <h4><%= listAPI[i].overview %> </h4> </div>
+  <div class="movie-title"><img id= "listimage" src=<%= `https://image.tmdb.org/t/p/w500/${listAPI[i].backdrop_path}`%>>  </div>
     <% } %>
-    
-   
-    <p><a href="/movies/lists/<%= listAPI[i].id %> "><%= listAPI[i].title %>  </a></p>
-    
-    
-    <p><%= listAPI[i].overview %> </p
 
         <% } %>
-
+</section>
