--- a/views/mov/movie.ejs
+++ b/views/mov/movie.ejs
@@ -1,65 +1,142 @@
 
+<link rel="stylesheet" href="/stylesheets/movie.css" />
+<nav>
+  <ul>
+    <li id="to-right">
+      <a href="/auth/logout">Log Out</a>
+    </li>
+    <li id="to-right">
+      <a href="/">Home</a>
+    </li>
+    <li id="to-right">
+      <a href="/movies/lists">Find your movie</a>
+    </li>
+    <li id="to-right">
+      <a href="/movies/popular">Popular movies</a>
+    </li>
+  </ul>
+</nav>
+
+<a class="movie-title" href="/movies/lists/<%= movies.id%>/similar ">similar</a>
 
 
- <title>Document</title>
-</head>
-<body>
-   <a href="/movies/lists/<%= movies.id%>/similar ">similar</a>
->>>>>>> 622f908 ( search is done- popular - similar)
-=======
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-   <a href="/movies/lists/<%= movies.id%>/similar ">similar</a>
->>>>>>> 22e7e0d (Go one folder up)
-    <% if (movies.backdrop_path === null) { %>
-        <p></p>
-    <% } else { %>
-        <img src="https://image.tmdb.org/t/p/w500/<%= movies.backdrop_path %> " alt="img">  
-   <% } %>
-  
-<h2><%=  movies.title %></h2>
 
-<h4>genres:</h4>
-            <% for( let i = 0; i < movies.genres.length; i++ ) { %>
-                 <p><%= movies.genres[i].name %> </p>
-            <% } %>
+ <!-- movie title is ok -->
 
-<h4> release_date:<%= movies.release_date %> </h4>
-<h4> revenue:<%= movies.revenue %> </h4>
-<h4> runtime:<%= movies.runtime %> </h4>
+ <div class="movie-title"> <h1><%=  movies.title %> </div></h1>
+
+
+ <% if (movies.backdrop_path === null) { %>
+  <p></p>
+<% } else { %>
+  <div class="movie-title"><img id="listimage" src="https://image.tmdb.org/t/p/w500/<%= movies.backdrop_path %> " alt="img">  </div>
+<% } %>
+
+
+
+<!-- movies genre -->
+
+<h4>Genres:</h4>
+<% for( let i = 0; i < movies.genres.length; i++ ) { %>
+<p><%= movies.genres[i].name %> </p>
+<% } %>
+
+<!-- movie release date-->
+      
+<% if (movies.release_date === null) { %>
+<p></p>
+<% } else { %>
+<h4>Release date: <%= movies.release_date %> </h4>
+
+<% } %>
+
+       
+<!-- movie revenue-->
+<% if (movies.revenue === null) { %>
+<p></p>
+<% } else { %>
+<h4>Revenue: <%= movies.revenue %> </h4>
+
+<% } %>
+
+<!-- movie runtime -->
+
+<% if (movies.runtime === null) { %>
+<p></p>
+<% } else { %>
+<h4>Runtime: <%= movies.runtime %> </h4>
+
+<% } %>
+
+<!-- movie language with forEach method -->
+
+
 <% movies.spoken_languages.forEach(movie => { %>
-       <h4>spoken_languages: <%= movie.name %> </h4>
+ <h4>Spoken languages: <%= movie.name %> </h4>
 <% }) %>
-<h4> status:<%= movies.status %> </h4>
-<h4> tagline:<%= movies.tagline %> </h4>
- <% if ( movies.video === false) { %>
-     
-    <h4> video: not available</h4>
-<% }else {%>
-    <h4> video: available"</h4>
-    <%} %> 
-<h4>vote_average:<%= movies.vote_average %> </h4>
-<h4>vote_count:<%= movies.vote_count %> </h4>
-<% movies.production_companies.forEach(company => { %>
-   
-            <% if (company.logo_path === null) { %>
-                <p></p>
-            <% } else { %>
-                <img src="https://image.tmdb.org/t/p/w500/<%= company.logo_path %> " alt="logo" id="imo">
-           <% } %>
-    <h4><%= company.name %></h4>
-    <h4><%= company.origin_country %></h4>
-  
-    <% }) %>
-    <a href="<%= movies.homepage %> "> Homepage </a>
-</body>
-</html>
 
+<!-- movies status -->
+
+<% if (movies.status === null) { %>
+<p></p>
+<% } else { %>
+<h4>Status: <%= movies.status %> </h4>
+<% } %>
+
+<!-- movies tagline -->
+<% if (movies.tagline === null) { %>
+<p></p>
+<% } else { %>
+<h4> Tagline: <%= movies.tagline %> </h4>
+<% } %>
+
+<!--video available-->
+<% if ( movies.video === false) { %>
+<h4> Video: not available</h4>
+<% }else {%>
+<h4> Video: available"</h4>
+<%} %> 
+
+<!-- movies vote average -->
+
+<% if (movies.vote_average === null) { %>
+<p></p>
+<% } else { %>
+<h4>Vote average: <%= movies.vote_average %> </h4>
+
+<% } %>
+
+<!-- movies count -->
+
+<% if (movies.vote_count === null) { %>
+<p></p>
+<% } else { %>
+ <h4>Vote count: <%= movies.vote_count %> </h4>
+<% } %>
+
+ <!-- movies production company with forEach -->
+
+<% movies.production_companies.forEach(company => { %>
+
+<% if (company.logo_path === null) { %>
+<p></p>
+<% } else { %>
+<div class="movie-title"><img src="https://image.tmdb.org/t/p/w500/<%= company.logo_path %> " alt="logo" id="imo"> </div>
+<% } %>
+
+ <!-- company name -->
+<% if (company.name === null) { %>
+<p></p>
+<% } else { %>
+<h4>Company name: <%= company.name %> </h4>
+ <% } %>
+
+ <!-- movies production country -->
+<% if (company.origin_country === null) { %>
+  <p>not available</p>
+<% } else { %>
+<h4>Company country:<%= company.origin_country %> </h4>
+<% } %>
+
+<% }) %>
 
