--- a/views/mov/similar.ejs
+++ b/views/mov/similar.ejs
@@ -1,3 +1,25 @@
+
+
+<link rel="stylesheet" href="/stylesheets/movie.css" />
+ <nav>
+    <ul>
+      <li id="to-right">
+        <a href="/auth/logout">Log Out</a>
+      </li>
+      <li id="to-right">
+        <a href="/">Home</a>
+      </li>
+      <li id="to-right">
+        <a href="/movies/lists">Find your movie</a>
+      </li>
+      <li id="to-right">
+        <a href="/movies/popular">Popular movies</a>
+      </li>
+    </ul>
+  </nav>
+
+
+
 <% for( let i = 0; i < similar.length; i++ ) { %>
     
     <% if (similar[i].backdrop_path === null) { %>
@@ -5,15 +27,15 @@
         <p></p>
     
         <% } else { %>
-       
-            <p> <img src=<%= `https://image.tmdb.org/t/p/w500/${similar[i].backdrop_path}`%>> </p> 
+        <p><a href="/movies/lists/<%= similar[i].id %> "><%= similar[i].title %>  </a></p>
+        <div class= "movie-title"><img id="listimage" src=<%= `https://image.tmdb.org/t/p/w500/${similar[i].backdrop_path}`%>>  </div>
     <% } %>
     
    
-    <p><a href="/movies/lists/<%= similar[i].id %> "><%= similar[i].title %>  </a></p>
     
     
-    <p><%= similar[i].overview %> </p
+    
+    <p><%= similar[i].overview %> </p>
 
         
         <% } %>
