--- a/views/mov/movie.ejs
+++ b/views/mov/movie.ejs
@@ -17,14 +17,12 @@
   </ul>
 </nav>
 
-<a class="movie-title" href="/movies/lists/<%= movies.id%>/similar ">similar</a>
-
-
+<div class="new">
 
  <!-- movie title is ok -->
 
  <div class="movie-title"> <h1><%=  movies.title %> </div></h1>
-
+ <a class="movie-title" href="/movies/lists/<%= movies.id%>/similar ">Find similar movies</a></h4>
 
  <% if (movies.backdrop_path === null) { %>
   <p></p>
@@ -32,11 +30,9 @@
   <div class="movie-title"><img id="listimage" src="https://image.tmdb.org/t/p/w500/<%= movies.backdrop_path %> " alt="img">  </div>
 <% } %>
 
-
-
 <!-- movies genre -->
 
-<h4>Genres:</h4>
+<h4 class="movie-title" >Genres</h4> 
 <% for( let i = 0; i < movies.genres.length; i++ ) { %>
 <p><%= movies.genres[i].name %> </p>
 <% } %>
@@ -46,7 +42,7 @@
 <% if (movies.release_date === null) { %>
 <p></p>
 <% } else { %>
-<h4>Release date: <%= movies.release_date %> </h4>
+<h4 class="movie-title">Release date: <%= movies.release_date %> </h4>
 
 <% } %>
 
@@ -55,7 +51,7 @@
 <% if (movies.revenue === null) { %>
 <p></p>
 <% } else { %>
-<h4>Revenue: <%= movies.revenue %> </h4>
+<h4 class="movie-title">Revenue: <%= movies.revenue %> </h4>
 
 <% } %>
 
@@ -64,7 +60,7 @@
 <% if (movies.runtime === null) { %>
 <p></p>
 <% } else { %>
-<h4>Runtime: <%= movies.runtime %> </h4>
+<h4 class="movie-title">Runtime: <%= movies.runtime %> </h4>
 
 <% } %>
 
@@ -72,7 +68,7 @@
 
 
 <% movies.spoken_languages.forEach(movie => { %>
- <h4>Spoken languages: <%= movie.name %> </h4>
+ <h4 class="movie-title">Spoken languages: <%= movie.name %> </h4>
 <% }) %>
 
 <!-- movies status -->
@@ -80,21 +76,21 @@
 <% if (movies.status === null) { %>
 <p></p>
 <% } else { %>
-<h4>Status: <%= movies.status %> </h4>
+<h4 class="movie-title">Status: <%= movies.status %> </h4>
 <% } %>
 
 <!-- movies tagline -->
 <% if (movies.tagline === null) { %>
 <p></p>
 <% } else { %>
-<h4> Tagline: <%= movies.tagline %> </h4>
+<h4 class="movie-title"> Tagline: <%= movies.tagline %> </h4>
 <% } %>
 
 <!--video available-->
 <% if ( movies.video === false) { %>
-<h4> Video: not available</h4>
+<h4 class="movie-title"> Video: not available</h4>
 <% }else {%>
-<h4> Video: available"</h4>
+<h4 class="movie-title"> Video: available"</h4>
 <%} %> 
 
 <!-- movies vote average -->
@@ -102,7 +98,7 @@
 <% if (movies.vote_average === null) { %>
 <p></p>
 <% } else { %>
-<h4>Vote average: <%= movies.vote_average %> </h4>
+<h4 class="movie-title">Vote average: <%= movies.vote_average %> </h4>
 
 <% } %>
 
@@ -111,7 +107,7 @@
 <% if (movies.vote_count === null) { %>
 <p></p>
 <% } else { %>
- <h4>Vote count: <%= movies.vote_count %> </h4>
+ <h4 class="movie-title">Vote count: <%= movies.vote_count %> </h4>
 <% } %>
 
  <!-- movies production company with forEach -->
@@ -128,15 +124,16 @@
 <% if (company.name === null) { %>
 <p></p>
 <% } else { %>
-<h4>Company name: <%= company.name %> </h4>
+<h4 class="movie-title">Company name: <%= company.name %> </h4>
  <% } %>
 
  <!-- movies production country -->
 <% if (company.origin_country === null) { %>
   <p>not available</p>
 <% } else { %>
-<h4>Company country:<%= company.origin_country %> </h4>
+<h4 class="movie-title">Company country:<%= company.origin_country %> </h4>
 <% } %>
 
 <% }) %>
 
+ </div>
