--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,7 +4,7 @@ body {
   flex-direction: column;
   padding: 50px;
   font: 14px tahoma;
-  background-color: rgb(25, 24, 25);
+  background-color: #191819;
   color: rgb(221, 215, 215);
   background-size: 1500px 2500px;
 }
