--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -12,12 +12,12 @@
 
 <form action="/auth/login" method="POST">
   <label>
-    Username
-    <input type="text" name="username" />
+   
+    <input type="text" name="username"  placeholder=" Username"/>
   </label>
   <label>
-    Password
-    <input type="password" name="password" />
+   
+    <input type="password" name="password" placeholder=" Password" />
   </label>
   <button type="submit">LOG IN</button>
 </form>
