--- a/views/mov/movie.ejs
+++ b/views/mov/movie.ejs
@@ -17,7 +17,18 @@
   </ul>
 </nav>
 
-<div class="new">
+        <div class="wrap">
+            <div class="search">
+                
+               <input class="searchTerm" name="rating" id="re" type="number"  max="10.5"
+               min="0.5" required placeholder="rate this movie">
+               <button  type="submit"class="searchButton material-symbols-outlined" >star</button>
+             
+               
+            </div>
+         </div>
+       
+    </form>
 
  <!-- movie title is ok -->
 
