--- a/views/auth/profile.ejs
+++ b/views/auth/profile.ejs
@@ -28,9 +28,19 @@
     </nav>
     
 
-<div class="profiletext"><h1>Welcome <%=user.username%></h1> </div>
+<div class="profiletext">
+  <h1> Your Profile Page </h1>
+  <h1>Welcome <%=user.username%></h1>
+  
+</div>
 
 
 </body>
 
 </html>
+
+
+
+
+
+
