--- a/views/mov/search.ejs
+++ b/views/mov/search.ejs
@@ -33,6 +33,6 @@
     <% } %>
     
     
-      <!-- <div> <%= data[i].overview %> </div> -->
+      <div> <%= data[i].overview %> </div>
 
         <% } %>
