--- a/views/mov/popular.ejs
+++ b/views/mov/popular.ejs
@@ -18,6 +18,8 @@
             </ul>
           </nav>
 
+<div class="new">
+
 <h1 class="movie-title"> Most popular movies</h1>
 
 
@@ -39,7 +41,7 @@
 
         <% } %>
 
-
+</div>
    
 
 
