--- a/public/stylesheets/movie.css
+++ b/public/stylesheets/movie.css
@@ -29,13 +29,13 @@ h3{
     border-radius: 4px;
     padding: 1px;
    
-
   }  
 
    .movieimage{
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 20%;
    }
 
   a{
@@ -44,6 +44,7 @@ h3{
   }
   h4 {
     text-align: center;
+    font-size: 5,3em;
   }
   .textmovielist{
     font-family: 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -57,6 +58,13 @@ h3{
     flex-direction: column;
    }
 .new{
-  background-color: rgb(33, 32, 44);
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  background-color: rgb(39, 43, 51);
+  
 }
   
+h2{
+  font-family: Georgia, 'Times New Roman', Times, serif;
+}
