--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,7 +3,7 @@ body {
   display: flex;
   flex-direction: column;
   padding: 50px;
-  font: 14px tahoma;
+  font: 14px georgia;
   background-color: #191819;
   color: rgb(221, 215, 215);
   background-size: 1500px 2500px;
