--- a/public/stylesheets/movie.css
+++ b/public/stylesheets/movie.css
@@ -1,4 +1,17 @@
 
+
+
+body{
+  display: flex;
+  flex-direction: column;
+  padding: 50px;
+  font: 20px;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  background-color: #191819;
+  color: rgb(221, 215, 215);
+  background-size: 1500px 2700px;
+  text-align: justify;
+}
 a{
   text-align: center;
 }
@@ -44,14 +57,10 @@ h3{
   }
   h4 {
     text-align: center;
-    font-size: 5,3em;
-  }
-  .textmovielist{
-    font-family: 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: 1,8em;
-    text-align: justify;
+    font-style: normal;
     padding: 10px;
   }
+ 
   section{
     display: flex;
     justify-content: center;
@@ -65,6 +74,3 @@ h3{
   
 }
   
-h2{
-  font-family: Georgia, 'Times New Roman', Times, serif;
-}
