--- a/public/stylesheets/movie.css
+++ b/public/stylesheets/movie.css
@@ -1,76 +1,69 @@
-
-
-
-body{
+body {
   display: flex;
   flex-direction: column;
   padding: 50px;
   font: 20px;
-  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-family: "Arial Narrow Bold", sans-serif;
   background-color: #191819;
   color: rgb(221, 215, 215);
   background-size: 1500px 2700px;
   text-align: justify;
 }
-a{
+a {
   text-align: center;
 }
 
-h1{
+h1 {
   text-align: center;
 }
-p{
+p {
   text-align: center;
 }
-h3{
+h3 {
   text-align: center;
 }
-  .movie-title {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    padding: 30px;
-  }
- 
-   #listimage {
+.movie-title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  padding: 30px;
+}
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: 6px solid rgb(0, 0, 0);
-    border-radius: 4px;
-    padding: 1px;
-   
-  }  
+#listimage {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 6px solid rgb(0, 0, 0);
+  border-radius: 4px;
+  padding: 1px;
+}
 
-   .movieimage{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 20%;
-   }
+.movieimage {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 20%;
+}
 
-  a{
-    justify-content: center;
-    padding: 10px;
-  }
-  h4 {
-    text-align: center;
-    font-style: normal;
-    padding: 10px;
-  }
- 
-  section{
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-   }
-.new{
+a {
+  justify-content: center;
+  padding: 10px;
+}
+h4 {
+  text-align: center;
+  font-style: normal;
+  padding: 10px;
+}
+
+section {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+.new {
   display: flex;
   justify-content: center;
   flex-direction: column;
   background-color: rgb(39, 43, 51);
-  
 }
-  
